version/0.40/_sources/api/solver/_autosummary/settings/periodic_child.rst.txt
:orphan:

.. _periodic_child:

periodic_child
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.periodic_child
    :show-inheritance:

.. rubric:: Attributes

==============================   =========================================================

Attribute                                                                          Summary

==============================   =========================================================
:ref:`name <name_5>`                                                   Name of the object.

:ref:`volume <volume_1>`             Boudary object is associated with this volume object.

:ref:`locations <locations_2>`                                        Input location name.

:ref:`periodic <periodic_1>`             Periodic boundary condition settings for threads.

:ref:`geometry <geometry_8>`                       Geometry settings for periodic threads.

:ref:`phase <phase_17>`                                 Domain name to define settings on.

==============================   =========================================================

.. rubric:: Methods

==================================   ===============================================

Method                                                                       Summary

==================================   ===============================================
:ref:`display <display_4>`                                   Display physics object.

:ref:`split <split_1>`                   Input boundary and location names to split.

:ref:`set_location <set_location>`                              Input location name.

:ref:`set_type <set_type_3>`                      Change the type for this boundary.

==================================   ===============================================

.. rubric:: Included in:

==========================   ================

Parent                                Summary

==========================   ================
:ref:`periodic <periodic>`       Thread-type.

==========================   ================

